# blockbite

./: .gitignore  package-lock.json  readme.md
blockbite-backend/: package-lock.json  package.json
blockbite-backend/src/: app.js  app2.js
blockbite-backend/src/controllers/: checkout.js
blockbite-backend/src/types/: onchain.ts
model/: dockerfile  dummy-dataset.py  recommender.ipynb  requirements.txt  similarity_matrix.csv  synthetic_food_orders.csv
model/utils/: preprocessing.py
server/: .dockerignore  .gitignore  dockerfile  requirements.txt
server/Backend/: create_superuser.py  quicktest.py  r2test.py  requirements.txt  schema.yml
server/Backend/Backend/: settings.py  urls.py
server/Backend/core/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
smart-contracts/onchain/: Anchor.toml  package-lock.json
smart-contracts/onchain/programs/onchain/: Cargo.toml
smart-contracts/onchain/programs/onchain/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css  main.jsx
ui/src/Components/: Footer.jsx  Header.jsx  Hero.jsx  Log.jsx  Main.jsx  Nav.jsx  Nav1.jsx  ProtectedRoute.jsx  ToastContext.jsx  Vnav.jsx  cNav.jsx  cartStorage.js  checkout.jsx  dash.jsx  fetchWithAuth.js  hcheckout.jsx  menu.jsx  menuu.jsx  walletConnect.jsx
ui/src/Forms/: loginForm.jsx  signUpForm.jsx
ui/src/Pages/: Cart.jsx  Checkout.jsx  Dashboard.jsx  Login.jsx  Signup.jsx  Vendors.jsx
ui/src/Styles/: Cart.scss  Checkout.scss  Dashboard.scss  Login.scss  SignUp.scss  Vendors.scss
ui/src/idl/: onchain.json
(+12 files in other folders)
